# Asura-Engine

./: .gitignore  CMakeLists.txt  README.md  license
Asura/: CMakeLists.txt
Asura-Editor/: CMakeLists.txt
Asura-Editor/assets/cache/shader/opengl/: Renderer2D_Circle.glsl.cached_opengl.frag  Renderer2D_Circle.glsl.cached_opengl.vert  Renderer2D_Circle.glsl.cached_vulkan.frag  Renderer2D_Circle.glsl.cached_vulkan.vert  Renderer2D_Line.glsl.cached_opengl.frag  Renderer2D_Line.glsl.cached_opengl.vert  Renderer2D_Line.glsl.cached_vulkan.frag  Renderer2D_Line.glsl.cached_vulkan.vert  Renderer2D_Quad.glsl.cached_opengl.frag  Renderer2D_Quad.glsl.cached_opengl.vert  Renderer2D_Quad.glsl.cached_vulkan.frag  Renderer2D_Quad.glsl.cached_vulkan.vert
Asura-Editor/assets/scenes/: cube.asura  physics2D.asura  test.asura
Asura-Editor/assets/shaders/: Renderer2D_Circle.glsl  Renderer2D_Line.glsl  Renderer2D_Quad.glsl
Asura-Editor/src/: AsuraEditorApp.cpp  AsuraEditorApp.h  EditorLayer.cpp  EditorLayer.h
Asura-Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Asura/src/: Asura.h  CMakeLists.txt
Asura/src/Asura/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  GUID.cpp  GUID.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Timer.h  Timestep.cpp  Timestep.h  Window.cpp  Window.h
Asura/src/Asura/Debug/: Instrumentor.cpp  Instrumentor.h
Asura/src/Asura/Events/: ApplicationEvent.cpp  ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.cpp  MouseEvent.h
Asura/src/Asura/Math/: Math.cpp  Math.h
Asura/src/Asura/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContex.cpp  GraphicsContex.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Asura/src/Asura/Scene/: Components.h  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.cpp  ScriptableEntity.h
Asura/src/Asura/Utils/: PlatformUtils.h
Asura/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Asura/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp  SandboxApp.h
